Revert process-kill path to previously working blocking behavior