@@ -436,39 +436,17 @@ public class WindowsUtils {
         }
 
         try {
-            Process killByImageName = new ProcessBuilder(
-                    "taskkill",
-                    "/im",
-                    normalizedProcessName,
-                    "/f"
-            ).start();
+            Process killByImageName = Runtime.getRuntime().exec(
+                    "taskkill /im \"" + normalizedProcessName + "\" /f"
+            );
             killByImageName.waitFor(3, TimeUnit.SECONDS);
 
             if (killByImageName.exitValue() == 0) {
                 return true;
             }
 
-            Process killByImageNameTree = new ProcessBuilder(
-                    "taskkill",
-                    "/im",
-                    normalizedProcessName,
-                    "/f",
-                    "/t"
-            ).start();
-            killByImageNameTree.waitFor(3, TimeUnit.SECONDS);
-
-            if (killByImageNameTree.exitValue() == 0) {
-                return true;
-            }
-
-            Process process = new ProcessBuilder(
-                    "tasklist",
-                    "/fi",
-                    "imagename eq " + normalizedProcessName,
-                    "/fo",
-                    "csv",
-                    "/nh"
-            ).start();
+            Process process = Runtime.getRuntime().exec(
+                    "tasklist /fi \"imagename eq " + normalizedProcessName + "\" /fo csv /nh");
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line;
@@ -489,25 +467,10 @@ public class WindowsUtils {
 
             boolean success = true;
             for (int pid : pids) {
-                Process kill = new ProcessBuilder(
-                        "taskkill",
-                        "/pid",
-                        String.valueOf(pid),
-                        "/f"
-                ).start();
+                Process kill = Runtime.getRuntime().exec("taskkill /pid " + pid + " /f");
                 kill.waitFor();
                 if (kill.exitValue() != 0) {
-                    Process killTree = new ProcessBuilder(
-                            "taskkill",
-                            "/pid",
-                            String.valueOf(pid),
-                            "/f",
-                            "/t"
-                    ).start();
-                    killTree.waitFor();
-                    if (killTree.exitValue() != 0) {
-                        success = false;
-                    }
+                    success = false;
                 }
             }
 
